--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ bin-debug/
 bin-release/
 [Oo]bj/
 [Bb]in/
-_book
-.idea
+/_book
+/.idea
 
 # Other files and folders
 .settings/
@@ -14,6 +14,7 @@ _book
 *.air
 *.ipa
 *.apk
+*.md
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
